fix: fixed text formatting on image popup and fixed z-index of popup and modal

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,6 +11,7 @@
   /*end cover entire screen commands */
   display: none; /*hidden by default */
   position: fixed; /*does not move when you scroll */
+  margin-top: 90px;
 }
 
 .modal_open {
