--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -12,6 +12,8 @@
   /*end cover entire screen commands */
   display: none; /*hidden by default */
   position: fixed; /*does not move when you scroll */
+  z-index: 2; /*go on top of trashcan icons */
+  margin-top: 90px;
 }
 
 .popup_open {
@@ -48,11 +50,11 @@
   max-width: 330px; /*needs to be set to smaller than box size so that margin auto works*/
   font-family: "Inter", "Arial", sans-serif; /*fallback fonts */
   font-style: normal;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
   padding: 0px;
-  margin: 34px 0px 54px 36px; /* top right bottom left not centered-aligned to left*/
+  margin: 10px 0px 0px 0px; /* top right bottom left not centered-aligned to left*/
 }
 
 .popup__image {
